# ProTel2026

./: 3-model-dss.sh  LICENSE  README.md  package-lock.json  readme
BackEnd/: .env  .env.example  drizzle.config.ts  package-lock.json  package.json
BackEnd/database/: schema.sql  schema_lite.sql
BackEnd/database/migrations/: 0006_add_field_id_to_states.sql  0007_add_embankments.sql  0008_embankments_connected_sub_blocks.sql  0009_update_device_topic_naming.sql  0010_add_irrigation_points_name_assigned_sub_blocks.sql  0019_mixed_thaddeus_ross.sql
BackEnd/database/migrations/meta/: _journal.json
BackEnd/src/: app.ts  server.ts
BackEnd/src/config/: index.ts
BackEnd/src/db/: geometry.ts
BackEnd/src/db/schema/: mst.ts  trx.ts
BackEnd/src/modules/auth/: auth.router.ts  auth.schema.ts  auth.service.ts
BackEnd/src/modules/state-builder/: estimator.ts  (+1 more)
BackEnd/src/scripts/: migrate.ts  reset.ts  seed-dev.ts  seed-dummy.ts
FrontEnd/: .env
FrontEnd/src/: App.tsx
FrontEnd/src/api/: client.ts  gisProc.ts
FrontEnd/src/components/: entity-detail-modal.tsx
FrontEnd/src/layout/: Header.tsx  Sidebar.tsx
Model/: .gitignore  blackbox_test_dss.py  pyproject.toml  requirements.txt
Model/app/: __init__.py  config.py  db.py  main.py
Model/app/modules/cog_processor/: __init__.py  converter.py  router.py
Model/app/modules/decision_engine/: engine.py  router.py  schemas.py  scorer.py
Model/app/shared/: types.py
docs/logic/: mod_sys_architecture_c4.md
docs/progres akmal/: update_dan_perubahan.md
gis-processing/: .env.example  pyproject.toml
src/: main.py
(+28 files in other folders)
