[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.5",
    "httpx==0.28.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "uvicorn[standard]==0.32.1",
]
