[project]
name = "ricemesh-gis-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.9.0",
    "dask[distributed]>=2026.3.0",
    "matplotlib>=3.10.8",
    "odc-stac[botocore]>=0.5.2",
    "opencv-python>=4.13.0.92",
    "pystac-client>=0.9.0",
    "python-dotenv>=1.2.2",
]
